syntax = "proto3";
package proto;

import "google/api/annotations.proto";

service Api {
    rpc GetUser(GetUserRequest) returns (User) {
        option (google.api.http) = {
            get: "/users/{id}"
        };
    };

    rpc CreateUser(CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/users"
            body: "user"
        };
    }
}

message User {
    string id = 1;
    string name = 2;
}

message CreateUserRequest {
    User user = 1;
}

message GetUserRequest {
    string id = 1;
}
